@@ -128,6 +128,7 @@ class InflectorTest < Test::Unit::TestCase
   
   UnderscoreToHuman = {
     "employee_salary" => "Employee salary",
+    "employee_id"     => "Employee",
     "underground"     => "Underground"
   }
 
